force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <label>Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>