force-app/main/default/objects/Receipt__c/fields/Mode_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Pay__c</fullName>
    <label>Mode of Pay</label>
    <length>18</length>
    <type>Text</type>
</CustomField>