force-app/main/default/objects/Receipt__c/fields/Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Id__c</fullName>
    <label>Receipt Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>