force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount_Paid_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>ContactId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>